--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="devlopify"
       content="Boots your audience reach through your own customized website."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./devlopify.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
